# UltimateTerminal

./: .gitignore  CMakeLists.txt  README.md  address_sanitizer_suppression.txt  build_app.sh  build_app_release.sh  deploy_app.sh  notes.txt  releaseNotes.txt  run_address_sanititzer.sh  run_coverage.sh  run_sim_tests.sh  run_thread_sanititzer.sh  run_ut.sh  verify_build.sh
config/: CMakeLists.txt  Settings_config.h  settings_header_gen.py  system_config.json
deploy/: UltimateTerminal
sw/Dialogs/: CMakeLists.txt
sw/Dialogs/public/: ApplicationSettingsDialog.h  LoggingSettingDialog.h  MessageBox.h  MessageDialog.h  PortSettingDialog.h  TabNameDialog.h  TraceFilterSettingDialog.h  UserButtonDialog.h
sw/Dialogs/source/: ApplicationSettingsDialog.cpp  LoggingSettingDialog.cpp  MessageBox.cpp  MessageDialog.cpp  PortSettingDialog.cpp  TabNameDialog.cpp  TraceFilterSettingDialog.cpp  UserButtonDialog.cpp
sw/Dialogs/test/mock/: ApplicationSettingsDialogMock.h  CMakeLists.txt  LoggingSettingDialogMock.h  MessageBoxMock.h  MessageDialogMock.h  PortSettingDialogMock.h  TabNameDialogMock.h  TraceFilterSettingDialogMock.h  UserButtonDialogMock.h
sw/Dialogs/test/unit/: ApplicationSettingsDialogTests.cpp  CMakeLists.txt  PortSettingDialogTests.cpp  TabNameDialogTests.cpp  TraceFilterSettingDialogTests.cpp  UserButtonDialogTests.cpp
sw/Drivers/: CMakeLists.txt
sw/Drivers/include/: ClientHandler.h  ISocketClientHandler.h  ProcessDriver.h  QtClientHandler.h  QtSerialDriver.h  QtSocketClient.h  QtSocketServer.h  SerialDriver.h  SocketClient.h  SocketHeaderHandler.hpp  SocketServer.h
sw/Drivers/public/: IProcessDriver.h  ISerialDriver.h  ISocketClient.h  ISocketDriverFactory.h  ISocketServer.h
sw/Drivers/source/: ClientHandler.cpp  ISocketDriverFactory.cpp  ProcessDriver.cpp  QtClientHandler.cpp  QtSerialDriver.cpp  QtSocketClient.cpp  QtSocketServer.cpp  SerialDriver.cpp  SocketClient.cpp  SocketServer.cpp
sw/Drivers/test/: CMakeLists.txt
sw/Drivers/test/integration/: CMakeLists.txt  QtSocketDriverIntegrationTests.cpp  SocketDriverIntegrationTests.cpp  testcert.pem
sw/Drivers/test/mock/: CMakeLists.txt  ISocketClientMock.h  SerialDriverMock.h
sw/Drivers/test/unit/: CMakeLists.txt  SerialDriverTests.cpp  SocketClientTests.cpp
sw/GUIController/: CMakeLists.txt
sw/GUIController/public/: GUIController.h  GUIControllerHelpers.hpp
sw/GUIController/source/: GUIController.cpp
sw/GUIController/test/mock/: CMakeLists.txt  GUIControllerMock.h
sw/GUIController/test/unit/: CMakeLists.txt  GUIControllerTests.cpp
sw/Logger/: CMakeLists.txt
sw/Logger/include/: FileWriter.h  ILoggerWriter.h  LoggerEngine.h  SocketWriter.h  StdoutWriter.h
sw/Logger/public/: Logger.h
sw/Logger/source/: LoggerEngine.cpp
sw/Logger/test/stubs/: LoggerEngineStub.cpp
sw/MainApplication/: CMakeLists.txt
sw/MainApplication/include/: ButtonCommandsExecutor.hpp  ButtonCommandsParser.hpp  FileLogger.h  GUIController.h  IFileLogger.h  LoggingSettingDialog.h  MainApplication.h  PortHandler.h  PortSettingDialog.h  PortSettingDialog.hpp  TraceFilterHandler.h  UserButton.h  UserButtonDialog.h  UserButtonHandler.h  UserButtonsTab.h  UserButtonsTabHandler.h  ui_MainWindow.h
sw/MainApplication/public/: DriversProxy.hpp  GUIController.h  GUIControllerSimulation.h  IFileLogger.h  IGUIController.h  IThemeController.h  Port.h  PortHandler.h  TraceFilter.h  TraceFilterHandler.h  ui_MainWindow.h
sw/MainApplication/source/: FileLogger.cpp  GUIController.cpp  GUIControllerSimulation.cpp  LoggingSettingDialog.cpp  MainApplication.cpp  Port.cpp  PortHandler.cpp  PortSettingDialog.cpp  TraceFilter.cpp  TraceFilterHandler.cpp  UserButton.cpp  UserButtonDialog.cpp  UserButtonDialog.cpp.orig  UserButtonHandler.cpp  UserButtonsTab.cpp  UserButtonsTabHandler.cpp
sw/MainApplication/test/: CMakeLists.txt
sw/RPC/: CMakeLists.txt  temp_main.cpp
sw/RPC/include/: ClientHandler.h  IRPCSocketClientHandler.h  RPCClientHandler.h  RPCSocketClient.h  RPCSocketHeaderHandler.hpp  RPCSocketServer.h  SocketHeaderHandler.hpp  SocketServer.h
sw/RPC/public/: IRPCSocketClient.h  IRPCSocketDriverFactory.h  IRPCSocketServer.h  ISocketClient.h  ISocketServer.h  RPCClient.h  RPCCommon.h  RPCServer.h
sw/RPC/source/: IRPCSocketDriverFactory.cpp  RPCClient.cpp  RPCClientHandler.cpp  RPCServer.cpp  RPCSocketClient.cpp  RPCSocketServer.cpp  SocketClient.cpp  SocketServer.cpp
sw/RPC/test/: CMakeLists.txt
sw/Settings/: CMakeLists.txt
sw/Settings/public/: Settings.h  SettingsHandler.h
sw/Settings/source/: SettingsHandler.cpp
sw/Utilities/: CMakeLists.txt
sw/Utilities/include/: TimersImpl.h
sw/Utilities/public/: ApplicationExecutor.hpp  EnumValue.hpp  GenericListener.hpp  ITimers.h  Persistence.h  PersistenceHandler.h  PersistenceHandler.hpp  Serialize.hpp  ThreadWorker.h  ThroughputCalculator.h
sw/Utilities/source/: Persistence.cpp  PersistenceHandler.cpp  ThreadWorker.cpp  TimersImpl.cpp
sw/Utilities/test/: CMakeLists.txt
testing/RPC/: CMakeLists.txt
testing/RPC/public/: RPCClient.h  RPCServer.h
testing/RPC/source/: RPCClient.cpp  RPCServer.cpp
testing/TestCases/: CMakeLists.txt  CommandsHistory.cpp  PersistenceSaveRestore.cpp  SerialPortReadWrite.cpp  SocketReadWrite.cpp  Test.cpp  UserButtonsSending.cpp  WindowScrolling.cpp
testing/TestFramework/: CMakeLists.txt
testing/TestFramework/public/: ApplicationExecutor.hpp  ProcessorUsage.hpp  TestFramework.h  TestFrameworkAPI.h  TestFrameworkCommon.h  TestFrameworkSettings.h
testing/TestFramework/source/: TestFramework.cpp
testing/TestStubs/: CMakeLists.txt
testing/TestStubs/public/: ApplicationSettingsDialog.h  GUIController.h  GUITestServer.h  LoggingSettingDialog.h  PortSettingDialog.h  TraceFilterSettingDialog.h  UserButtonDialog.h
testing/TestStubs/source/: ApplicationSettingsDialog.cpp  GUIController.cpp  GUITestServer.cpp  LoggingSettingDialog.cpp  MessageBox.cpp  MessageDialog.cpp  PortSettingDialog.cpp  TabNameDialog.cpp  TraceFilterSettingDialog.cpp  UserButtonDialog.cpp
tools/: CMakeLists.txt  SerialDataGenerator.cpp  SocketDataGenerator.cpp
(+73 files in other folders)
