add_executable(SerialPortReadWrite SerialPortReadWrite.cpp)
target_link_libraries(SerialPortReadWrite PUBLIC gtest_main TestFramework)
add_test(NAME SerialPortReadWrite COMMAND SerialPortReadWrite)

add_executable(SocketReadWrite SocketReadWrite.cpp)
target_link_libraries(SocketReadWrite PUBLIC gtest_main TestFramework)
add_test(NAME SocketReadWrite COMMAND SocketReadWrite)

add_executable(UserButtonsSending UserButtonsSending.cpp)
target_link_libraries(UserButtonsSending PUBLIC gtest_main TestFramework)
add_test(NAME UserButtonsSending COMMAND UserButtonsSending)

add_executable(CommandsHistory CommandsHistory.cpp)
target_link_libraries(CommandsHistory PUBLIC gtest_main TestFramework)
add_test(NAME CommandsHistory COMMAND CommandsHistory)

add_executable(WindowScrolling WindowScrolling.cpp)
target_link_libraries(WindowScrolling PUBLIC gtest_main TestFramework)
add_test(NAME WindowScrolling COMMAND WindowScrolling)